--- a/PerkingOpera/Info.plist
+++ b/PerkingOpera/Info.plist
@@ -37,5 +37,7 @@
         <key>NSAllowsArbitraryLoads</key>
         <true/>
     </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>cameraDesciption</string>
 </dict>
 </plist>
